@@ -43,6 +43,22 @@ using mrViewer as a render viewer.<br>
 
       </div>
 
+      <div style="margin-left: 40px;" class="menu">Single Instance</div>
+
+      <div style="margin-left: 40px;"> allows you to have only a single mrViewer.  If other viewers are opened, they will send their images to the original mrViewer window.  Note that for mrViewer to know whether it is open it relies on writing a lock file in your preferences directory ( $HOME/.filmaura ).  If mrViewer crashes, you may need to remove that lock file manually.<br>
+
+      <br>
+
+      </div>
+
+      <div style="margin-left: 40px;" class="menu">Auto Refit Image</div>
+
+      <div style="margin-left: 40px;">This option makes images be centered and zoomed out properly for viewing every time.  Note, however, that this refitting happens every time you switch images or load new ones, so you should turn it off if you are trying to compare two images at a certain zoom factor.<br>
+
+      <br>
+
+      </div>
+
       <div style="margin-left: 40px;" class="menu">Normal</div>, <div class="menu">Fullscreen</div>, and <div class="menu">Presentation</div>
 
       <div style="margin-left: 40px;">allows you to switch
@@ -62,7 +78,7 @@ Elements</div>
 
       <div style="margin-left: 40px;">This section allows
 you
-to toggle which portions of mrViewer
+to toggle which windows and portions of mrViewer
 appear as soon as mrViewer is opened.<br>
 
       </div>
