@@ -41,6 +41,12 @@ Here you can change the default gain and gamma when the viewer starts.<br>
 Here you can set the default crop region when the viewer starts.<br>
 
       <br>
+      <div class="menu">Display Window</div>
+      <br>
+      This option which is on by default, shows only the display window of images such as OpenEXR.  Turning it off will show the data window instead.  For most images both are the same, but OpenEXR makes a distinction between both.
+
+      <br>
+      <br>
       <div class="menu">Compensate Pixel Ratio</div>
 
       <br>
