@@ -1,4 +1,6 @@
 v2.6.3.4 - Bug fixed thumbnails on sequences in file requester.
+	 - When autofit image is off, we center the image without changing 
+	   zoom factor.
 v2.6.3.3 - Bug fixed some DISPLAY environment variables that did not match the
 	   documentation for them.
 	 - Bug fixed an audio muting problem on some movies.  This was a 
